fix: flex broken on little options-container

--- a/src/app/shop/_pages/product-page/product-page.component.scss
+++ b/src/app/shop/_pages/product-page/product-page.component.scss
@@ -165,6 +165,7 @@
     &__options-card-container {
       order: 3;
       flex-basis: 100%;
+      min-height: 320px;
       width: calc(100% - 330px + #{$update-button-height-mobile});
     }
 
